[package]
name = "memory_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-string = "1.0"
terminal = "0.2.1"
reqwest = { version = "0.11", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"]}
regex = "1"
fakedata_generator = "0.1.0"
